--- a/DTOs/DTOs.csproj
+++ b/DTOs/DTOs.csproj
@@ -8,6 +8,10 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.3">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="NLog.MailKit" Version="5.2.0" />
     <PackageReference Include="NLog.Web.AspNetCore" Version="5.3.11" />
   </ItemGroup>
