add HandlingError middleware

--- a/project/appsettings.json
+++ b/project/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrig": {
+    "webApiProject": "Data Source=srv2\\PUPILS;Initial Catalog=webApiProject;Trusted_Connection=True;TrustServerCertificate=True"
+  },
   "AllowedHosts": "*"
 }
