start writing rating and log mismatch order sum

--- a/project/appsettings.json
+++ b/project/appsettings.json
@@ -5,8 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "ConnectionStrig": {
-    "webApiProject": "Data Source=srv2\\PUPILS;Initial Catalog=webApiProject;Trusted_Connection=True;TrustServerCertificate=True"
-  },
+ "ConnectionString": "Data Source=srv2\\PUPILS;Initial Catalog=webApiProject;Trusted_Connection=True;TrustServerCertificate=True",
   "AllowedHosts": "*"
 }
