--- a/Repositories/Repositories.csproj
+++ b/Repositories/Repositories.csproj
@@ -19,6 +19,7 @@
     </PackageReference>
     <PackageReference Include="NLog.MailKit" Version="5.2.0" />
     <PackageReference Include="NLog.Web.AspNetCore" Version="5.3.11" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.6" />
   </ItemGroup>
 
   <ItemGroup>
