start tokens & some fixing

--- a/project/appsettings.json
+++ b/project/appsettings.json
@@ -5,6 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
- "ConnectionString": "Data Source=srv2\\PUPILS;Initial Catalog=webApiProject;Trusted_Connection=True;TrustServerCertificate=True",
+  "key": "My Great Secret Key My Great Secret Key",
+  "ConnectionString": "Data Source=srv2\\PUPILS;Initial Catalog=webApiProject;Trusted_Connection=True;TrustServerCertificate=True",
   "AllowedHosts": "*"
 }
