get id from HttpContext for create order

--- a/project/appsettings.json
+++ b/project/appsettings.json
@@ -6,6 +6,6 @@
     }
   },
   "key": "My Great Secret Key My Great Secret Key",
-  "ConnectionString": "Data Source=srv2\\PUPILS;Initial Catalog=webApiProject;Trusted_Connection=True;TrustServerCertificate=True",
+  "ConnectionString": "Data Source=srv2\\PUPILS;Initial Catalog=webApiProjectSECURE;Trusted_Connection=True;TrustServerCertificate=True",
   "AllowedHosts": "*"
 }
