change connection string

--- a/project/appsettings.json
+++ b/project/appsettings.json
@@ -6,6 +6,8 @@
     }
   },
   "key": "My Great Secret Key My Great Secret Key",
-  "ConnectionString": "Data Source=srv2\\PUPILS;Initial Catalog=webApiProjectSECURE;Trusted_Connection=True;TrustServerCertificate=True",
+  "ConnectionStrings": {
+    "localDB": "Data Source=localhost\\SQLEXPRESS;Initial Catalog=shop;Trusted_Connection=True;TrustServerCertificate=True"
+  },
   "AllowedHosts": "*"
 }
